// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`case-sensitive.html - html-verify 1`] = `
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>

`;

exports[`case-sensitive.html - html-verify 2`] = `
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>
~
<CaseSensitive
  CaseSensitive="true"
  >hello
  world</CaseSensitive
>

`;

exports[`case-sensitive.html - html-verify 3`] = `
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>

`;

exports[`case-sensitive.html - html-verify 4`] = `
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>

`;

exports[`case-sensitive.html - html-verify 5`] = `
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>

`;

exports[`closing-at-start.html - html-verify 1`] = `
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >
    cccccccccc
</div>
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >cccccccccc
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
    >bbbbbbbbbb</a
  >
  cccccccccc
</div>
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
    >bbbbbbbbbb</a
  >cccccccccc
</div>

`;

exports[`closing-at-start.html - html-verify 2`] = `
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >
    cccccccccc
</div>
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >cccccccccc
</div>
~
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
    >bbbbbbbbbb</a
  >
  cccccccccc
</div>
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
    >bbbbbbbbbb</a
  >cccccccccc
</div>

`;

exports[`closing-at-start.html - html-verify 3`] = `
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >
    cccccccccc
</div>
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >cccccccccc
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>aaaaaaaaaa <a href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong">bbbbbbbbbb</a> cccccccccc</div>
<div>aaaaaaaaaa <a href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong">bbbbbbbbbb</a>cccccccccc</div>

`;

exports[`closing-at-start.html - html-verify 4`] = `
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >
    cccccccccc
</div>
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >cccccccccc
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
    >bbbbbbbbbb</a
  >
  cccccccccc
</div>
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
    >bbbbbbbbbb</a
  >cccccccccc
</div>

`;

exports[`closing-at-start.html - html-verify 5`] = `
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >
    cccccccccc
</div>
<div>
    aaaaaaaaaa
    <a
      href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
      >bbbbbbbbbb</a
    >cccccccccc
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
  >
    bbbbbbbbbb
  </a>
  cccccccccc
</div>
<div>
  aaaaaaaaaa
  <a
    href="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
  >
    bbbbbbbbbb
  </a>
  cccccccccc
</div>

`;

exports[`custom-element.html - html-verify 1`] = `
<app-foo></app-foo>
<app-bar></app-bar>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<app-foo></app-foo>
<app-bar></app-bar>

`;

exports[`custom-element.html - html-verify 2`] = `
<app-foo></app-foo>
<app-bar></app-bar>
~
<app-foo></app-foo>
<app-bar></app-bar>

`;

exports[`custom-element.html - html-verify 3`] = `
<app-foo></app-foo>
<app-bar></app-bar>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<app-foo></app-foo>
<app-bar></app-bar>

`;

exports[`custom-element.html - html-verify 4`] = `
<app-foo></app-foo>
<app-bar></app-bar>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<app-foo></app-foo>
<app-bar></app-bar>

`;

exports[`custom-element.html - html-verify 5`] = `
<app-foo></app-foo>
<app-bar></app-bar>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<app-foo></app-foo>
<app-bar></app-bar>

`;

exports[`openging-at-end.html - html-verify 1`] = `
<p
  >Want to write us a letter? Use our<a
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
  href1="contacts.html#Mailing_address"
  href2="contacts.html#Mailing_address"
  href3="contacts.html#Mailing_address"
  href4="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<p>
  Want to write us a letter? Use our<a
    ><b><a>mailing address</a></b></a
  >.
</p>

<p>
  Want to write us a letter? Use our<a href="contacts.html#Mailing_address"
    ><b><a>mailing address</a></b></a
  >.
</p>

<p>
  Want to write us a letter? Use our<a
    href="contacts.html#Mailing_address"
    href1="contacts.html#Mailing_address"
    href2="contacts.html#Mailing_address"
    href3="contacts.html#Mailing_address"
    href4="contacts.html#Mailing_address"
    ><b><a>mailing address</a></b></a
  >.
</p>

`;

exports[`openging-at-end.html - html-verify 2`] = `
<p
  >Want to write us a letter? Use our<a
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
  href1="contacts.html#Mailing_address"
  href2="contacts.html#Mailing_address"
  href3="contacts.html#Mailing_address"
  href4="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>
~
<p>
  Want
  to
  write
  us
  a
  letter?
  Use
  our<a
    ><b
      ><a
        >mailing
        address</a
      ></b
    ></a
  >.
</p>

<p>
  Want
  to
  write
  us
  a
  letter?
  Use
  our<a
    href="contacts.html#Mailing_address"
    ><b
      ><a
        >mailing
        address</a
      ></b
    ></a
  >.
</p>

<p>
  Want
  to
  write
  us
  a
  letter?
  Use
  our<a
    href="contacts.html#Mailing_address"
    href1="contacts.html#Mailing_address"
    href2="contacts.html#Mailing_address"
    href3="contacts.html#Mailing_address"
    href4="contacts.html#Mailing_address"
    ><b
      ><a
        >mailing
        address</a
      ></b
    ></a
  >.
</p>

`;

exports[`openging-at-end.html - html-verify 3`] = `
<p
  >Want to write us a letter? Use our<a
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
  href1="contacts.html#Mailing_address"
  href2="contacts.html#Mailing_address"
  href3="contacts.html#Mailing_address"
  href4="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<p>
  Want to write us a letter? Use our<a
    ><b><a>mailing address</a></b></a
  >.
</p>

<p>
  Want to write us a letter? Use our<a href="contacts.html#Mailing_address"
    ><b><a>mailing address</a></b></a
  >.
</p>

<p>
  Want to write us a letter? Use our<a href="contacts.html#Mailing_address" href1="contacts.html#Mailing_address" href2="contacts.html#Mailing_address" href3="contacts.html#Mailing_address" href4="contacts.html#Mailing_address"
    ><b><a>mailing address</a></b></a
  >.
</p>

`;

exports[`openging-at-end.html - html-verify 4`] = `
<p
  >Want to write us a letter? Use our<a
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
  href1="contacts.html#Mailing_address"
  href2="contacts.html#Mailing_address"
  href3="contacts.html#Mailing_address"
  href4="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<p
  >Want to write us a letter? Use our<a
    ><b><a>mailing address</a></b></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a href="contacts.html#Mailing_address"
    ><b><a>mailing address</a></b></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
    href="contacts.html#Mailing_address"
    href1="contacts.html#Mailing_address"
    href2="contacts.html#Mailing_address"
    href3="contacts.html#Mailing_address"
    href4="contacts.html#Mailing_address"
    ><b><a>mailing address</a></b></a
  >.</p
>

`;

exports[`openging-at-end.html - html-verify 5`] = `
<p
  >Want to write us a letter? Use our<a
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>

<p
  >Want to write us a letter? Use our<a
  href="contacts.html#Mailing_address"
  href1="contacts.html#Mailing_address"
  href2="contacts.html#Mailing_address"
  href3="contacts.html#Mailing_address"
  href4="contacts.html#Mailing_address"
    ><b
      ><a>mailing address</a></b
    ></a
  >.</p
>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<p>
  Want to write us a letter? Use our
  <a>
    <b><a>mailing address</a></b>
  </a>
  .
</p>

<p>
  Want to write us a letter? Use our
  <a href="contacts.html#Mailing_address">
    <b><a>mailing address</a></b>
  </a>
  .
</p>

<p>
  Want to write us a letter? Use our
  <a
    href="contacts.html#Mailing_address"
    href1="contacts.html#Mailing_address"
    href2="contacts.html#Mailing_address"
    href3="contacts.html#Mailing_address"
    href4="contacts.html#Mailing_address"
  >
    <b><a>mailing address</a></b>
  </a>
  .
</p>

`;

exports[`pre.html - html-verify 1`] = `
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>Foo     Bar
</pre>
<pre>
     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.
  </figcaption>
</figure>
<pre data-attr-1="foo" data-attr-2="foo" data-attr-3="foo" data-attr-4="foo" data-attr-5="foo" data-attr-6="foo">
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>
Foo     Bar
</pre>
<pre>     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using
    preformatted text characters.
  </figcaption>
</figure>
<pre
  data-attr-1="foo"
  data-attr-2="foo"
  data-attr-3="foo"
  data-attr-4="foo"
  data-attr-5="foo"
  data-attr-6="foo"
>
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>

`;

exports[`pre.html - html-verify 2`] = `
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>Foo     Bar
</pre>
<pre>
     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.
  </figcaption>
</figure>
<pre data-attr-1="foo" data-attr-2="foo" data-attr-3="foo" data-attr-4="foo" data-attr-5="foo" data-attr-6="foo">
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>
~
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>
Foo     Bar
</pre>
<pre>     Foo     Bar</pre>
<figure
  role="img"
  aria-labelledby="cow-caption"
>
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption
    id="cow-caption"
  >
    A
    cow
    saying,
    "I'm
    an
    expert
    in
    my
    field."
    The
    cow
    is
    illustrated
    using
    preformatted
    text
    characters.
  </figcaption>
</figure>
<pre
  data-attr-1="foo"
  data-attr-2="foo"
  data-attr-3="foo"
  data-attr-4="foo"
  data-attr-5="foo"
  data-attr-6="foo"
>
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>

`;

exports[`pre.html - html-verify 3`] = `
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>Foo     Bar
</pre>
<pre>
     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.
  </figcaption>
</figure>
<pre data-attr-1="foo" data-attr-2="foo" data-attr-3="foo" data-attr-4="foo" data-attr-5="foo" data-attr-6="foo">
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>
Foo     Bar
</pre>
<pre>     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.</figcaption>
</figure>
<pre data-attr-1="foo" data-attr-2="foo" data-attr-3="foo" data-attr-4="foo" data-attr-5="foo" data-attr-6="foo">
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>

`;

exports[`pre.html - html-verify 4`] = `
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>Foo     Bar
</pre>
<pre>
     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.
  </figcaption>
</figure>
<pre data-attr-1="foo" data-attr-2="foo" data-attr-3="foo" data-attr-4="foo" data-attr-5="foo" data-attr-6="foo">
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>
Foo     Bar
</pre>
<pre>     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using
    preformatted text characters.
  </figcaption>
</figure>
<pre
  data-attr-1="foo"
  data-attr-2="foo"
  data-attr-3="foo"
  data-attr-4="foo"
  data-attr-5="foo"
  data-attr-6="foo"
>
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>

`;

exports[`pre.html - html-verify 5`] = `
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>Foo     Bar
</pre>
<pre>
     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.
  </figcaption>
</figure>
<pre data-attr-1="foo" data-attr-2="foo" data-attr-3="foo" data-attr-4="foo" data-attr-5="foo" data-attr-6="foo">
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>
Foo     Bar
</pre>
<pre>     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using
    preformatted text characters.
  </figcaption>
</figure>
<pre
  data-attr-1="foo"
  data-attr-2="foo"
  data-attr-3="foo"
  data-attr-4="foo"
  data-attr-5="foo"
  data-attr-6="foo"
>
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>

`;

exports[`tags.html - html-verify 1`] = `
<br/>
<br />
<br  />
<br
/>
<br attribute-a />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute />
<br attribute-a="value" />
<br
  attribute-a="value"
/>
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value" />
<br attribute-a="value" attribute-b="value" attribute-c="value" attribute-d="value" attribute-e="value" attribute-f="value" />
<div>string</div>
<div>very very very very very very very very very very very very very very very very long string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute>string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">string</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">string</div>
<div attribute="value">very very very very very very very very very very very very very very very very long string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">very very very very very very very very very very very very very very very very long string</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4">
  <source src="movie.ogg" type="video/ogg">
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div><div>string</div><div>string</div></div>
<div><div><div>string</div></div><div>string</div></div>
<div><div>string</div><div><div>string</div></div></div>
<div><div></div></div>
<div><div></div><div></div></div>
<div><div><div><div><div><div><div>string</div></div></div></div></div></div></div>
<div>
  <div>string</div>
</div>
<div>

  <div>string</div>

</div>
<div>

  <div>string</div>

  <div>string</div>

</div>
<ul
  >123<li
    class="foo"
    id="bar"
  >First</li
  >456<li
    class="baz"
  >Second</li
  >789</ul
>
<span>*<b>200</b></span>
<img src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong" />123
<div>123<meta attr/>456</div>
<p>x<span a="b"></span></p>
<p>x<meta a></p>
<p>x<meta></p>
<span></span>

<label aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa></label> |
<span></span>
<br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li>12345678901234567890123456789012345678901234567890123456789012345678901234567890</li>
<div>
<app-nav></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-nav [input]="something"></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-primary-navigation></app-primary-navigation>
<router-outlet></router-outlet>
<app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>.
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<br />
<br />
<br />
<br />
<br attribute-a />
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
/>
<br attribute-a="value" />
<br attribute-a="value" />
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
/>
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
/>
<br
  attribute-a="value"
  attribute-b="value"
  attribute-c="value"
  attribute-d="value"
  attribute-e="value"
  attribute-f="value"
/>
<div>string</div>
<div>
  very very very very very very very very very very very very very very very
  very long string
</div>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
>
  string
</div>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
>
  string
</div>
<div
  attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
>
  string
</div>
<div attribute="value">
  very very very very very very very very very very very very very very very
  very long string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  very very very very very very very very very very very very very very very
  very long string
</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4" />
  <source src="movie.ogg" type="video/ogg" />
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div>
  <div>string</div>
  <div>string</div>
</div>
<div>
  <div><div>string</div></div>
  <div>string</div>
</div>
<div>
  <div>string</div>
  <div><div>string</div></div>
</div>
<div><div></div></div>
<div>
  <div></div>
  <div></div>
</div>
<div>
  <div>
    <div>
      <div>
        <div>
          <div><div>string</div></div>
        </div>
      </div>
    </div>
  </div>
</div>
<div><div>string</div></div>
<div><div>string</div></div>
<div>
  <div>string</div>

  <div>string</div>
</div>
<ul>
  123
  <li class="foo" id="bar">First</li>
  456
  <li class="baz">Second</li>
  789
</ul>
<span>*<b>200</b></span>
<img
  src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
/>123
<div>123<meta attr />456</div>
<p>x<span a="b"></span></p>
<p>x<meta a /></p>
<p>x<meta /></p>
<span></span>

<label
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
></label>
| <span></span> <br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button>
<br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)">
  Disabled Cancel
</button>
<br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button>
<br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)">
  Disabled Cancel
</button>
<br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li>
  12345678901234567890123456789012345678901234567890123456789012345678901234567890
</li>
<div>
  <app-nav></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-nav [input]="something"></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-primary-navigation></app-primary-navigation>
  <router-outlet></router-outlet>
  <app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>.
</div>

`;

exports[`tags.html - html-verify 2`] = `
<br/>
<br />
<br  />
<br
/>
<br attribute-a />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute />
<br attribute-a="value" />
<br
  attribute-a="value"
/>
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value" />
<br attribute-a="value" attribute-b="value" attribute-c="value" attribute-d="value" attribute-e="value" attribute-f="value" />
<div>string</div>
<div>very very very very very very very very very very very very very very very very long string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute>string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">string</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">string</div>
<div attribute="value">very very very very very very very very very very very very very very very very long string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">very very very very very very very very very very very very very very very very long string</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4">
  <source src="movie.ogg" type="video/ogg">
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div><div>string</div><div>string</div></div>
<div><div><div>string</div></div><div>string</div></div>
<div><div>string</div><div><div>string</div></div></div>
<div><div></div></div>
<div><div></div><div></div></div>
<div><div><div><div><div><div><div>string</div></div></div></div></div></div></div>
<div>
  <div>string</div>
</div>
<div>

  <div>string</div>

</div>
<div>

  <div>string</div>

  <div>string</div>

</div>
<ul
  >123<li
    class="foo"
    id="bar"
  >First</li
  >456<li
    class="baz"
  >Second</li
  >789</ul
>
<span>*<b>200</b></span>
<img src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong" />123
<div>123<meta attr/>456</div>
<p>x<span a="b"></span></p>
<p>x<meta a></p>
<p>x<meta></p>
<span></span>

<label aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa></label> |
<span></span>
<br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li>12345678901234567890123456789012345678901234567890123456789012345678901234567890</li>
<div>
<app-nav></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-nav [input]="something"></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-primary-navigation></app-primary-navigation>
<router-outlet></router-outlet>
<app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>.
</div>
~
<br />
<br />
<br />
<br />
<br
  attribute-a
/>
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
/>
<br
  attribute-a="value"
/>
<br
  attribute-a="value"
/>
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
/>
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
/>
<br
  attribute-a="value"
  attribute-b="value"
  attribute-c="value"
  attribute-d="value"
  attribute-e="value"
  attribute-f="value"
/>
<div>
  string
</div>
<div>
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  long
  string
</div>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
>
  string
</div>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
>
  string
</div>
<div
  attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
>
  string
</div>
<div
  attribute="value"
>
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  long
  string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  very
  long
  string
</div>
<video
  width="320"
  height="240"
  controls
>
  <source
    src="movie.mp4"
    type="video/mp4"
  />
  <source
    src="movie.ogg"
    type="video/ogg"
  />
  Your
  browser
  does
  not
  support
  the
  video
  tag.
</video>
<div>
  <div>
    string
  </div>
</div>
<div>
  <div>
    string
  </div>
  <div>
    string
  </div>
</div>
<div>
  <div>
    <div>
      string
    </div>
  </div>
  <div>
    string
  </div>
</div>
<div>
  <div>
    string
  </div>
  <div>
    <div>
      string
    </div>
  </div>
</div>
<div>
  <div></div>
</div>
<div>
  <div></div>
  <div></div>
</div>
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              string
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<div>
  <div>
    string
  </div>
</div>
<div>
  <div>
    string
  </div>
</div>
<div>
  <div>
    string
  </div>

  <div>
    string
  </div>
</div>
<ul>
  123
  <li
    class="foo"
    id="bar"
  >
    First
  </li>
  456
  <li
    class="baz"
  >
    Second
  </li>
  789
</ul>
<span
  >*<b
    >200</b
  ></span
>
<img
  src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
/>123
<div>
  123<meta
    attr
  />456
</div>
<p>
  x<span
    a="b"
  ></span>
</p>
<p>
  x<meta
    a
  />
</p>
<p>
  x<meta />
</p>
<span></span>

<label
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
></label>
|
<span></span>
<br />
<button
  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
>
  12345678901234567890
</button>
<br /><br />

<button
  bind-disabled="isUnchanged"
  on-click="onSave($event)"
>
  Disabled
  Cancel
</button>
<br /><br />
<button
  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
>
  12345678901234567890
</button>
<br /><br />

<button
  bind-disabled="isUnchanged"
  on-click="onSave($event)"
>
  Disabled
  Cancel
</button>
<br /><br />
<p>
  "<span
    [innerHTML]="title"
  ></span
  >"
  is
  the
  <i
    >property
    bound</i
  >
  title.
</p>
<li>
  12345678901234567890123456789012345678901234567890123456789012345678901234567890
</li>
<div>
  <app-nav></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-nav
    [input]="something"
  ></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-primary-navigation></app-primary-navigation>
  <router-outlet></router-outlet>
  <app-footer
    [input]="something"
  ></app-footer>
</div>
<x:root
  ><SPAN
    >foreign
    tag
    name
    should
    not
    be
    lower
    cased</SPAN
  ></x:root
>
<div>
  Lorem
  ipsum
  dolor
  sit
  amet,
  consectetur
  adipiscing
  elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem
  ipsum
  dolor
  sit
  amet,
  consectetur
  adipiscing
  elit,
  <strong
    >seddoeiusmod</strong
  >.
</div>

`;

exports[`tags.html - html-verify 3`] = `
<br/>
<br />
<br  />
<br
/>
<br attribute-a />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute />
<br attribute-a="value" />
<br
  attribute-a="value"
/>
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value" />
<br attribute-a="value" attribute-b="value" attribute-c="value" attribute-d="value" attribute-e="value" attribute-f="value" />
<div>string</div>
<div>very very very very very very very very very very very very very very very very long string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute>string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">string</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">string</div>
<div attribute="value">very very very very very very very very very very very very very very very very long string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">very very very very very very very very very very very very very very very very long string</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4">
  <source src="movie.ogg" type="video/ogg">
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div><div>string</div><div>string</div></div>
<div><div><div>string</div></div><div>string</div></div>
<div><div>string</div><div><div>string</div></div></div>
<div><div></div></div>
<div><div></div><div></div></div>
<div><div><div><div><div><div><div>string</div></div></div></div></div></div></div>
<div>
  <div>string</div>
</div>
<div>

  <div>string</div>

</div>
<div>

  <div>string</div>

  <div>string</div>

</div>
<ul
  >123<li
    class="foo"
    id="bar"
  >First</li
  >456<li
    class="baz"
  >Second</li
  >789</ul
>
<span>*<b>200</b></span>
<img src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong" />123
<div>123<meta attr/>456</div>
<p>x<span a="b"></span></p>
<p>x<meta a></p>
<p>x<meta></p>
<span></span>

<label aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa></label> |
<span></span>
<br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li>12345678901234567890123456789012345678901234567890123456789012345678901234567890</li>
<div>
<app-nav></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-nav [input]="something"></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-primary-navigation></app-primary-navigation>
<router-outlet></router-outlet>
<app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>.
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<br />
<br />
<br />
<br />
<br attribute-a />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute />
<br attribute-a="value" />
<br attribute-a="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value" />
<br attribute-a="value" attribute-b="value" attribute-c="value" attribute-d="value" attribute-e="value" attribute-f="value" />
<div>string</div>
<div>very very very very very very very very very very very very very very very very long string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute>string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">string</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">string</div>
<div attribute="value">very very very very very very very very very very very very very very very very long string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">very very very very very very very very very very very very very very very very long string</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4" />
  <source src="movie.ogg" type="video/ogg" />
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div>
  <div>string</div>
  <div>string</div>
</div>
<div>
  <div><div>string</div></div>
  <div>string</div>
</div>
<div>
  <div>string</div>
  <div><div>string</div></div>
</div>
<div><div></div></div>
<div>
  <div></div>
  <div></div>
</div>
<div>
  <div>
    <div>
      <div>
        <div>
          <div><div>string</div></div>
        </div>
      </div>
    </div>
  </div>
</div>
<div><div>string</div></div>
<div><div>string</div></div>
<div>
  <div>string</div>

  <div>string</div>
</div>
<ul>
  123
  <li class="foo" id="bar">First</li>
  456
  <li class="baz">Second</li>
  789
</ul>
<span>*<b>200</b></span> <img src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong" />123
<div>123<meta attr />456</div>
<p>x<span a="b"></span></p>
<p>x<meta a /></p>
<p>x<meta /></p>
<span></span>

<label aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa></label> | <span></span> <br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)">Disabled Cancel</button> <br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)">Disabled Cancel</button> <br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li>12345678901234567890123456789012345678901234567890123456789012345678901234567890</li>
<div>
  <app-nav></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-nav [input]="something"></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-primary-navigation></app-primary-navigation>
  <router-outlet></router-outlet>
  <app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, "<strong>seddoeiusmod</strong>".</div>
<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <strong>seddoeiusmod</strong>.</div>

`;

exports[`tags.html - html-verify 4`] = `
<br/>
<br />
<br  />
<br
/>
<br attribute-a />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute />
<br attribute-a="value" />
<br
  attribute-a="value"
/>
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value" />
<br attribute-a="value" attribute-b="value" attribute-c="value" attribute-d="value" attribute-e="value" attribute-f="value" />
<div>string</div>
<div>very very very very very very very very very very very very very very very very long string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute>string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">string</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">string</div>
<div attribute="value">very very very very very very very very very very very very very very very very long string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">very very very very very very very very very very very very very very very very long string</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4">
  <source src="movie.ogg" type="video/ogg">
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div><div>string</div><div>string</div></div>
<div><div><div>string</div></div><div>string</div></div>
<div><div>string</div><div><div>string</div></div></div>
<div><div></div></div>
<div><div></div><div></div></div>
<div><div><div><div><div><div><div>string</div></div></div></div></div></div></div>
<div>
  <div>string</div>
</div>
<div>

  <div>string</div>

</div>
<div>

  <div>string</div>

  <div>string</div>

</div>
<ul
  >123<li
    class="foo"
    id="bar"
  >First</li
  >456<li
    class="baz"
  >Second</li
  >789</ul
>
<span>*<b>200</b></span>
<img src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong" />123
<div>123<meta attr/>456</div>
<p>x<span a="b"></span></p>
<p>x<meta a></p>
<p>x<meta></p>
<span></span>

<label aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa></label> |
<span></span>
<br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li>12345678901234567890123456789012345678901234567890123456789012345678901234567890</li>
<div>
<app-nav></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-nav [input]="something"></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-primary-navigation></app-primary-navigation>
<router-outlet></router-outlet>
<app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>.
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<br />
<br />
<br />
<br />
<br attribute-a />
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
/>
<br attribute-a="value" />
<br attribute-a="value" />
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
/>
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
/>
<br
  attribute-a="value"
  attribute-b="value"
  attribute-c="value"
  attribute-d="value"
  attribute-e="value"
  attribute-f="value"
/>
<div>string</div>
<div
  >very very very very very very very very very very very very very very very
  very long string</div
>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
  >string</div
>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
  >string</div
>
<div
  attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
  >string</div
>
<div attribute="value"
  >very very very very very very very very very very very very very very very
  very long string</div
>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
  >string</div
>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
  >very very very very very very very very very very very very very very very
  very long string</div
>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4" />
  <source src="movie.ogg" type="video/ogg" /> Your browser does not support the
  video tag.
</video>
<div><div>string</div></div> <div><div>string</div><div>string</div></div>
<div
  ><div><div>string</div></div
  ><div>string</div></div
>
<div
  ><div>string</div><div><div>string</div></div></div
>
<div><div></div></div> <div><div></div><div></div></div>
<div
  ><div
    ><div
      ><div
        ><div
          ><div><div>string</div></div></div
        ></div
      ></div
    ></div
  ></div
>
<div> <div>string</div> </div> <div> <div>string</div> </div>
<div>
  <div>string</div>

  <div>string</div>
</div>
<ul
  >123<li class="foo" id="bar">First</li
  >456<li class="baz">Second</li
  >789</ul
>
<span>*<b>200</b></span>
<img
  src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
/>123 <div>123<meta attr />456</div> <p>x<span a="b"></span></p>
<p>x<meta a/></p> <p>x<meta /></p> <span></span>

<label
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
></label>
| <span></span> <br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button>
<br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button>
<br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li
  >12345678901234567890123456789012345678901234567890123456789012345678901234567890</li
>
<div>
  <app-nav></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-nav [input]="something"></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-primary-navigation></app-primary-navigation>
  <router-outlet></router-outlet>
  <app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>.
</div>

`;

exports[`tags.html - html-verify 5`] = `
<br/>
<br />
<br  />
<br
/>
<br attribute-a />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute />
<br attribute-a="value" />
<br
  attribute-a="value"
/>
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value" />
<br attribute-a="value" attribute-b="value" attribute-c="value" attribute-d="value" attribute-e="value" attribute-f="value" />
<div>string</div>
<div>very very very very very very very very very very very very very very very very long string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute>string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">string</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">string</div>
<div attribute="value">very very very very very very very very very very very very very very very very long string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">very very very very very very very very very very very very very very very very long string</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4">
  <source src="movie.ogg" type="video/ogg">
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div><div>string</div><div>string</div></div>
<div><div><div>string</div></div><div>string</div></div>
<div><div>string</div><div><div>string</div></div></div>
<div><div></div></div>
<div><div></div><div></div></div>
<div><div><div><div><div><div><div>string</div></div></div></div></div></div></div>
<div>
  <div>string</div>
</div>
<div>

  <div>string</div>

</div>
<div>

  <div>string</div>

  <div>string</div>

</div>
<ul
  >123<li
    class="foo"
    id="bar"
  >First</li
  >456<li
    class="baz"
  >Second</li
  >789</ul
>
<span>*<b>200</b></span>
<img src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong" />123
<div>123<meta attr/>456</div>
<p>x<span a="b"></span></p>
<p>x<meta a></p>
<p>x<meta></p>
<span></span>

<label aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa></label> |
<span></span>
<br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
  >12345678901234567890</button
> <br /><br />

<button bind-disabled="isUnchanged" on-click="onSave($event)"
  >Disabled Cancel</button
>
<br /><br />
<p>"<span [innerHTML]="title"></span>" is the <i>property bound</i> title.</p>
<li>12345678901234567890123456789012345678901234567890123456789012345678901234567890</li>
<div>
<app-nav></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-nav [input]="something"></app-nav>
<router-outlet></router-outlet>
<app-footer></app-footer>

<app-primary-navigation></app-primary-navigation>
<router-outlet></router-outlet>
<app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  "<strong>seddoeiusmod</strong>".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>.
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<br />
<br />
<br />
<br />
<br attribute-a />
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
/>
<br attribute-a="value" />
<br attribute-a="value" />
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
/>
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
/>
<br
  attribute-a="value"
  attribute-b="value"
  attribute-c="value"
  attribute-d="value"
  attribute-e="value"
  attribute-f="value"
/>
<div>string</div>
<div>
  very very very very very very very very very very very very very very very
  very long string
</div>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
>
  string
</div>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value"
>
  string
</div>
<div
  attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value"
>
  string
</div>
<div attribute="value">
  very very very very very very very very very very very very very very very
  very long string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  very very very very very very very very very very very very very very very
  very long string
</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4" />
  <source src="movie.ogg" type="video/ogg" />
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div>
  <div>string</div>
  <div>string</div>
</div>
<div>
  <div><div>string</div></div>
  <div>string</div>
</div>
<div>
  <div>string</div>
  <div><div>string</div></div>
</div>
<div><div></div></div>
<div>
  <div></div>
  <div></div>
</div>
<div>
  <div>
    <div>
      <div>
        <div>
          <div><div>string</div></div>
        </div>
      </div>
    </div>
  </div>
</div>
<div><div>string</div></div>
<div><div>string</div></div>
<div>
  <div>string</div>

  <div>string</div>
</div>
<ul>
  123
  <li class="foo" id="bar">First</li>
  456
  <li class="baz">Second</li>
  789
</ul>
<span>
  *
  <b>200</b>
</span>
<img
  src="longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong"
/>
123
<div>
  123
  <meta attr />
  456
</div>
<p>
  x
  <span a="b"></span>
</p>
<p>
  x
  <meta a />
</p>
<p>
  x
  <meta />
</p>
<span></span>

<label
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
></label>
|
<span></span>
<br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button>
<br />
<br />

<button bind-disabled="isUnchanged" on-click="onSave($event)">
  Disabled Cancel
</button>
<br />
<br />
<button xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx>12345678901234567890</button>
<br />
<br />

<button bind-disabled="isUnchanged" on-click="onSave($event)">
  Disabled Cancel
</button>
<br />
<br />
<p>
  "
  <span [innerHTML]="title"></span>
  " is the
  <i>property bound</i>
  title.
</p>
<li>
  12345678901234567890123456789012345678901234567890123456789012345678901234567890
</li>
<div>
  <app-nav></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-nav [input]="something"></app-nav>
  <router-outlet></router-outlet>
  <app-footer></app-footer>

  <app-primary-navigation></app-primary-navigation>
  <router-outlet></router-outlet>
  <app-footer [input]="something"></app-footer>
</div>
<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, "
  <strong>seddoeiusmod</strong>
  ".
</div>
<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
  <strong>seddoeiusmod</strong>
  .
</div>

`;

exports[`textarea.html - html-verify 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>

`;

exports[`textarea.html - html-verify 2`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>
~
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea
                          rows="10"
                          cols="45"
                          name="text"
                        >
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div>
  <textarea>lorem ipsum</textarea>
</div>

`;

exports[`textarea.html - html-verify 3`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>

`;

exports[`textarea.html - html-verify 4`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>

`;

exports[`textarea.html - html-verify 5`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

<div><textarea>lorem ipsum</textarea></div>

`;

exports[`unsupported.html - html-verify 1`] = `
<center></center>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<center></center>

`;

exports[`unsupported.html - html-verify 2`] = `
<center></center>
~
<center></center>

`;

exports[`unsupported.html - html-verify 3`] = `
<center></center>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<center></center>

`;

exports[`unsupported.html - html-verify 4`] = `
<center></center>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<center></center>

`;

exports[`unsupported.html - html-verify 5`] = `
<center></center>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<center></center>

`;
